--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Weather Forecast</title>
 </head>
 <body>
-    <button>
-        
-    </button>
+    <div>
+        <input >
+        <button>
+            Buscar
+        </button>
+        <h2>Tempo em São Paulo</h2>
+        <p>21 graus</p>
+    </div>
 </body>
 </html>
