--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </button>
         <h2>Tempo em São Paulo</h2>
         <p>21 graus</p>
+        <p>Névoa</p>
+        <p>Umidade: 70%</p>
     </div>
 </body>
 </html>
